--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="title-text-box">
               <b>
                 <h3 style="color: rgb(80, 80, 80); text-transform: none">
-                  Unraveling the Snake: Python Environment Management in Unix
+                  Python Environment Management in Unix
                 </h3>
                 <p style="color: rgb(80, 80, 80)">James Stevenson</p>
                 <p style="color: rgb(80, 80, 80)">2021/06/23</p>
